--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.3",
+    "mongoose": "^5.10.18",
+    "next": "^10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
